Lett cleanup